--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/WillyGilbert/Weather-Widget/issues"
   },
-  "homepage": "https://github.com/WillyGilbert/Weather-Widget#readme",
+  "homepage": "https://github.com/WillyGilbert/Weather-Widget",
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
